# ib-analyst-Project

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_ai.sh  run_local.sh
.github/workflows/: ci.yml
examples/: AtlasBank_FY2024.json  Zephyr_Software_FY2024.json
ib_analyst/: Makefile
ib_analyst/core/ib_analyst/: cli.py  client.py  prompt.py  report_formatter.py  schema.py  sector_benchmarks.py  validators.py
ib_analyst/tests/: test_schema.py  test_validators.py
sample_outputs/ai/: ZPHY_FY2024_ai_sample.html  ZPHY_FY2024_ai_sample.md
sample_outputs/local/: ZPHY_FY2024_local_sample.html  ZPHY_FY2024_local_sample.md
src/ib_analyst/: cli.py  client.py  local_analysis.py  prompt.py  report_formatter.py  schema.py  sector_benchmarks.py  validators.py
