[project]
name = "ib-analyst"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ib-analyst = "ib_analyst.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
